// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Airport 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": 244,
      }
    }
  >
    <div
      className="sc-fAjcbJ gdnCxI"
    >
      <div
        className="react-autosuggest__container"
      >
        <div
          className="sc-gPEVay bHJZOm"
        >
          <textarea
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={false}
            aria-owns="react-autowhatever-1"
            autoCapitalize="sentences"
            autoComplete="off"
            autoFocus={true}
            className="react-autosuggest__input sc-iRbamj lmaxUD"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Туда"
            role="combobox"
            rows="1"
            type="text"
            value=""
            wrap="off"
          />
          <div
            className="airport-input__geo sc-jlyJG giBihK"
          >
            <div
              className="sc-csuQGl fZITyK"
            >
              
            </div>
            
            
          </div>
          <div
            className="sc-bRBYWo gpToxv"
          >
            
          </div>
        </div>
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks FilterSection 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": 252,
      }
    }
  >
    <section
      className="sc-ifAKCX mmAti"
    >
      <header
        className="sc-EHOje iwBHie"
      >
        <div>
          Пересадки
        </div>
        <div>
          Сбросить
        </div>
      </header>
      <div
        className="sc-bZQynM bdCSpS"
      >
        <div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                Без пересадок
              </span>
            </label>
          </div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                1 пересадка
              </span>
            </label>
          </div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                2 и более
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="rc-collapse"
        style={undefined}
      >
        <div
          className="rc-collapse-item sc-iwsKbI hIrClY sc-htpNat jpYvPn"
          style={undefined}
        >
          <div
            aria-expanded={false}
            className="rc-collapse-header"
            onClick={[Function]}
            role="tab"
          >
            <div
              className="sc-htoDjs lekexi"
            >
              <div
                className="sc-jqCOkK fjzSgr"
              >
                Пересадки
              </div>
              <svg
                className="sc-dnqmqq htZMOn icon-inherit-color sc-bxivhb doUjBV"
                size="xxsmall"
                style={undefined}
              >
                <use
                  xlinkHref="#kb_arrow-down"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Blocks Styled Tabs 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={undefined}
    >
      <span
        aria-disabled={undefined}
        className="sc-jbKcbu DerpS"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
      <span
        aria-disabled={undefined}
        className="sc-jbKcbu ksOBwy"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        2. Оплата
      </span>
      <span
        aria-disabled={undefined}
        className="sc-jbKcbu DerpS"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        3. Получение билета
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
      style={undefined}
    >
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
        style={undefined}
      >
        Second tab
      </div>
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-bwzfXH gSYwXg"
  >
    <p>
      box content
    </p>
  </div>
</div>
`;

exports[`Storyshots Buttons Default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi gBfaHm"
    disabled={undefined}
    size="normal"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi keJrks"
    disabled={true}
    size="normal"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="normal"
    >
      Cake is a lie
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Icon-only button 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi bqDqgc"
    disabled={undefined}
    size="large"
  >
    <span
      className="sc-VigVT botnlB"
      size="large"
    >
      <svg
        className="sc-bxivhb tbkNI"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_carrot_monochrome"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Sizes 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi eYyVYF"
    disabled={undefined}
    size="large"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="large"
    >
      Бальшой
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons With icons 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi klZNue"
    disabled={undefined}
    size="normal"
  >
    <span
      className="sc-VigVT cerRmq"
      size="normal"
    >
      <svg
        className="sc-bxivhb tbkNI"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_plane"
        />
      </svg>
    </span>
    <span
      className="sc-gqjmRU kSqCP"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="sc-VigVT cerRmq"
      size="normal"
    >
      <svg
        className="sc-bxivhb tbkNI"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_hand-baggage"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div>
    <label
      className="sc-kAzzGY fDOeck"
      disabled={false}
    >
      <span
        checked={false}
        className="checkbox sc-jzJRlG dREzXp"
        disabled={false}
      >
        <input
          checked={false}
          className="sc-jTzLTM izYhGY"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="label-text sc-cSHVUG jkPykj"
        disabled={false}
      >
        Авиабилеты
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <label
    className="sc-kAzzGY fLUfjB"
    disabled={true}
  >
    <span
      checked={false}
      className="checkbox sc-jzJRlG dvWCAm"
      disabled={true}
    >
      <input
        checked={false}
        className="sc-jTzLTM izYhGY"
        disabled={true}
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="label-text sc-cSHVUG hHvAiZ"
      disabled={true}
    >
      Авиабилеты
    </span>
  </label>
</div>
`;

exports[`Storyshots Collapse Accordion 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default active panel 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item rc-collapse-item-active sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={true}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
        <div
          className="rc-collapse-content rc-collapse-content-active"
          role="tabpanel"
        >
          <div
            className="rc-collapse-content-box"
          >
            
              A dog is a type of domesticated animal.
              Known for its loyalty and faithfulness,
              it can be found as a welcome guest in many households across the world.
            
          </div>
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Different controls group 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-ckVGcZ berOiR"
  >
    <button
      className="no-global sc-gZMcBi egQBpH"
      disabled={undefined}
      size="large"
    >
      <span
        className="sc-gqjmRU hdtzDm"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="sc-gPEVay dVRcuQ"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-iRbamj Nayoz"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-jlyJG bmDLSd"
      >
        <div
          className="sc-csuQGl fZITyK"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="sc-bRBYWo bcOilx"
      >
        SVO
      </div>
    </div>
    <button
      className="no-global sc-gZMcBi cNYsWJ"
      disabled={undefined}
      size="large"
    >
      <span
        className="sc-gqjmRU hdtzDm"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Inputs group 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-ckVGcZ berOiR"
  >
    <div
      className="sc-gPEVay btWnfK"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-iRbamj ddcRKe"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-jlyJG giBihK"
      >
        <div
          className="sc-csuQGl fZITyK"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="sc-bRBYWo bcOilx"
      >
        SVO
      </div>
    </div>
    <div
      className="sc-jKJlTe bNlokg"
      onClick={[Function]}
    >
      <svg
        className="controls-group__swap sc-eNQAEJ jUAzDs icon-inherit-color sc-bxivhb doUjBV"
        size="xxsmall"
        style={undefined}
      >
        <use
          xlinkHref="#kb_left-right"
        />
      </svg>
    </div>
    <div
      className="sc-gPEVay cWiCNU"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-iRbamj kVHSmU"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-jlyJG bmDLSd"
      >
        <div
          className="sc-csuQGl fZITyK"
        >
          Несуществующий город
        </div>
        
        
      </div>
      <div
        className="sc-bRBYWo gpToxv"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange DateRange 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-cvbbAY eVoYXr"
  >
    <div
      className="DateInput--startDate--placeholder DateInput--endDate--placeholder"
    >
      <div
        className="DateRangePicker"
      >
        <div>
          <div
            className="DateRangePickerInput"
          >
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Туда"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="startDate"
                name="startDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Туда"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Туда
              </div>
            </div>
            <div
              className="DateRangePickerInput__arrow"
            >
              <span />
            </div>
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Обратно"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="endDate"
                name="endDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Обратно"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Обратно
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <onClickOutside-Mock-Decorator>
    <div
      className="sc-uJMKN dSphFm sc-hSdWYo bmqAoE"
    >
      <div
        onClick={[Function]}
      >
        click to open  
        <button
          className="no-global sc-gZMcBi gBfaHm"
          disabled={undefined}
          size="normal"
        >
          <span
            className="sc-gqjmRU hdtzDm"
            size="normal"
          >
            click
          </span>
        </button>
      </div>
    </div>
  </onClickOutside-Mock-Decorator>
</div>
`;

exports[`Storyshots Fluid layout Aside on top with beforeSection prop 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-hMqMXs jkJMEI"
    >
      <div
        className="sc-kEYyzF fjOgpN"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="sc-kkGfuU efatRR"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Single column 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-iAyFgw dNwxhT"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Two columns 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-hMqMXs jkJMEI"
    >
      <div
        className="sc-kEYyzF fjOgpN"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="sc-kkGfuU bivuqP"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FormItem default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-chPdSV kgupvL"
  >
    <label
      className="sc-kgoBCf cJBTPS"
      htmlFor="input"
    >
      Cake is a lie
    </label>
    <input
      id="input"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Icon Icon with fill 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <svg
    className="sc-bxivhb fzMgiT"
    size="large"
    style={undefined}
  >
    <use
      xlinkHref="#kb_checkbox"
    />
  </svg>
</div>
`;

exports[`Storyshots Input default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-dxgOiQ Vjnyy"
    disabled={false}
    size="large"
  >
    <input
      className="sc-kpOJdX gEINQW"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
      value={undefined}
    />
  </div>
</div>
`;

exports[`Storyshots Input disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-dxgOiQ dMWFPs"
    disabled={true}
    size="large"
  >
    <input
      className="sc-kpOJdX fBbEoC"
      disabled={true}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
      value={undefined}
    />
  </div>
</div>
`;

exports[`Storyshots Input error 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-dxgOiQ gJEAMD"
    disabled={false}
    size="large"
  >
    <input
      className="sc-kpOJdX gEINQW"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
      value={undefined}
    />
    <span
      className="sc-kGXeez bUKNtk"
    >
      Только латинские буквы
    </span>
  </div>
</div>
`;

exports[`Storyshots Input success 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-dxgOiQ cdnOrF"
    disabled={false}
    size="large"
  >
    <input
      className="sc-kpOJdX gEINQW"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      type="text"
      value={undefined}
    />
  </div>
</div>
`;

exports[`Storyshots PassengerPicker Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-caSCKo eMRrci"
  >
    <div>
      <div
        className="sc-gisBJw eDYGFH"
      >
        Взрослые
      </div>
      <div
        className="sc-kjoXOD aeMvF"
      >
        До 2 лет, без места
      </div>
    </div>
    <div
      className="sc-kgAjT kmzIQb"
    >
      <span
        className="sc-cHGsZl eNzLWg"
      >
        1
      </span>
      <div
        className="sc-cJSrbW iaNJqQ"
      >
        <button
          className="no-global sc-TOsTZ hupAjt sc-gZMcBi dkdJqv"
          disabled={true}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="sc-VigVT cerRmq"
            size="normal"
          >
            <svg
              className="sc-bxivhb tbkNI"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_minus"
              />
            </svg>
          </span>
        </button>
        <button
          className="no-global sc-TOsTZ hupAjt sc-gZMcBi ezVieq"
          disabled={false}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="sc-VigVT cerRmq"
            size="normal"
          >
            <svg
              className="sc-bxivhb tbkNI"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Utils Responsive only 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div>
    <div
      className="sc-ksYbfQ jDlMSb"
    >
      <div
        className="sc-bbmXgH eRIohR"
      >
        Desktop
      </div>
    </div>
    <div
      className="sc-kvZOFW hyOMbm"
    >
      <div
        className="sc-gGBfsJ gjrIPG"
      >
        Handheld
      </div>
    </div>
    <div
      className="sc-frDJqD iHkSRj"
    >
      <div
        className="sc-jnlKLf iaNzvx"
      >
        Tablet
      </div>
    </div>
    <div
      className="sc-hmzhuo iQhnuj"
    >
      <div
        className="sc-fYxtnH boMRQT"
      >
        Mobile
      </div>
    </div>
    <div
      className="sc-hqyNC RDKhO"
    >
      <div
        className="sc-tilXH hymKjz"
      >
        Not mobile
      </div>
    </div>
  </div>
</div>
`;
